# compilatori2-assignments

./: .gitignore  README.md
1Assignment/: CMakeLists.txt
1Assignment/algebraic_identity/: CMakeLists.txt
1Assignment/algebraic_identity/source/: CMakeLists.txt
1Assignment/algebraic_identity/src/: CMakeLists.txt  algebraic_identity.cpp
1Assignment/algebraic_identity/test/: test.optimized.ll
1Assignment/multi_instruction/src/: CMakeLists.txt  multi_instruction.cpp
1Assignment/multi_instruction/test/: test.c  test.ll  test.optimized.ll  test2.ll  test2.optimized.ll
1Assignment/primo_passo/SRC/: primo_passo.cpp
1Assignment/primo_passo/TEST/: test.c  test.ll
1Assignment/strength_reduction/src/: CMakeLists.txt  strength_reduction.cpp
1Assignment/strength_reduction/test/: testSR.c  testSR.ll  testSROptz.ll
1Assignment/terzo_passo/: CMakeLists.txt
2Assignment/: very_busy_expressions.md
3Assignment/src/: CMakeLists.txt  LoopPass.cpp
3Assignment/test/: Loop.c  Loop.ll
